--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "google-cloud-bigquery>=3.31.0",
     "pandas>=2.2.3",
+    "pandas-gbq>=0.28.0",
     "pandas-stubs>=2.2.3.250308",
     "pyarrow>=19.0.1",
     "python-dotenv>=1.1.0",
