--- a/config/settings.toml
+++ b/config/settings.toml
@@ -1,15 +1,16 @@
 [bigquery]
 project_id = "cis-4400-457114"
-dataset = "nyc_opendata"
+dataset = "parking_and_311"
 
 [tables]
-agency_dim = "Agency_Dim"
-complaint_dim = "Complaint_Dim"
-date_dim = "Date_Dim"
-fact_311_complaints = "Fact_311_Complaints"
-fact_parking_tickets = "Fact_Parking_Tickets"
-integrated_fact_service_requests = "Integrated_Fact_Service_Requests"
-location_dim = "Location_Dim"
-parking_location_dim = "Parking_Location_Dim"
-vehicle_dim = "Vehicle_Dim"
-violation_dim = "Violation_Dim"
+agency_dim = "dim_agency"
+complaint_dim = "dim_complaint"
+date_dim = "dim_date"
+fact_311_complaints = "fact_311_complaints"
+fact_parking_tickets = "fact_parking_tickets"
+integrated_fact_service_requests = "integrated_fact_service_requests"
+location_dim = "dim_location"
+parking_location_dim = "dim_parking_location"
+time_dim = "dim_time"
+vehicle_dim = "dim_vehicle"
+violation_dim = "dim_violation"
