--- a/config/settings.toml
+++ b/config/settings.toml
@@ -1,6 +1,6 @@
 [bigquery]
 project_id = "cis-4400-457114"
-dataset = "parking_and_311"
+dataset = "parking_and_311_staging"
 
 [tables]
 agency_dim = "dim_agency"
