--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,14 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "google-cloud-bigquery>=3.31.0",
+    "isort>=6.0.1",
     "pandas>=2.2.3",
     "pandas-gbq>=0.28.0",
     "pandas-stubs>=2.2.3.250308",
+    "pre-commit>=4.2.0",
     "pyarrow>=19.0.1",
     "python-dotenv>=1.1.0",
+    "ruff>=0.11.7",
     "sodapy>=2.2.0",
 ]
 
@@ -18,4 +21,14 @@ dependencies = [
 dev = [
     "mypy>=1.15.0",
     "pylint>=3.3.6",
+]
+
+[tool.isort]
+profile = "black"
+force_sort_within_sections = true
+known_first_party = ["config", "etl"]
+
+[tool.ruff]
+exclude = [
+    "**/__init__.py",
 ]
